<resources>
    <string name="app_name">AAU Push</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">LET\'S GET STARTED</string>
    <string name="welcome_to_aaupush">WELCOME TO AAU PUSH</string>
    <string name="announcement_example">This is an announcementThis is an announcementThis is an announcement
    This is an announcementThis is an announcementThis is an announcementThis is an announcement
    This is an announcementThis is an announcementThis is an announcement</string>
    <string name="select_study_field">Select Study Field</string>
    <string name="year_CAPS">YEAR</string>
    <string name="section_CAPS">SECTION</string>
    <string name="year_input_hint">Year(1, 2, 3…)</string>
    <string name="section_input_hint">Section(1, 2, 3…)</string>
    <string name="finish_setup">FINISH SETUP</string>
    <string name="courses_you_re_following">Courses You\'re Following</string>
    <string name="choose_course_to_follow">Choose Course To Follow</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="contribute_on_github">Contribute on GitHub</string>
    <string name="the_push_team_copy_right">The PUSH Team 2017</string>
    <string name="materials">Materials</string>
    <string name="announcements">Announcements</string>
    <string name="advanced">Advanced</string>
    <string name="delete_everything_and_start_over">Delete everything and start over</string>
    <string name="courses">Courses</string>
    <string name="follow_unfollow_courses">Follow/Unfollow courses</string>
    <string name="notifications">Notifications</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="show_courses_im_following">Show Courses I\'m Following</string>
    <string name="background_refresh_interval">Background Refresh Interval</string>
    <string name="show_full_post">SHOW FULL POST</string>
    <string name="hide_full_post">HIDE FULL POST</string>
    <string name="select_department">Select Department</string>
    <string name="add_drop_courses">Add / Drop Courses</string>
    <string name="section_list_title">Find The Course You\'d Like To Add</string>
    <string name="course_list_title">Check/Uncheck The Course To Add/Drop</string>
    <string name="courses_i_m_taking">COURSES I\'M TAKING</string>
    <string name="add_course">ADD COURSE</string>
    <string name="finish">FINISH</string>
</resources>
