<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.aaupush.aaupush.Setting.SettingsHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/courses"
                    />

                <TextView
                    android:id="@+id/follow_unfollow_courses_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:text="@string/add_drop_courses"
                    android:gravity="center_vertical"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/notification_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/notifications"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/materials_notification_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:text="@string/materials"
                    android:gravity="center_vertical"
                    />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/announcements_notification_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:text="@string/announcements"
                    android:gravity="center_vertical"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:text="@string/advanced"
                    />

                <TextView
                    android:id="@+id/start_over_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:text="@string/delete_everything_and_start_over"
                    android:gravity="center_vertical"
                    />

                <LinearLayout
                    android:id="@+id/refresh_interval_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:text="@string/background_refresh_interval"
                        android:gravity="center_vertical" />

                    <TextView
                        android:id="@+id/background_refresh_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        style="@style/Base.TextAppearance.AppCompat.Caption"
                        android:gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
