<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/push_background"
        android:tint="#fff"
        android:src="@drawable/ic_push_logo"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/ic_info_outline"
            android:drawablePadding="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="Version 1.0"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/contribute_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/ic_github"
            android:drawablePadding="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/contribute_on_github"
            tools:ignore="RtlHardcoded" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/open_source_licenses_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/ic_description_black"
            android:drawablePadding="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/open_source_licenses"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/web_page_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/ic_link_black"
            android:drawablePadding="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="www.aaupush.com"
            />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/copy_right_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:drawableLeft="@drawable/ic_copyright_black"
            android:drawablePadding="16dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/the_push_team_copy_right"
            tools:ignore="RtlHardcoded" />

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />

</LinearLayout>